# mpvacious

./: .gitignore
mpvacious/: main.lua  pyproject.toml
mpvacious/anki/: new_note_checker.lua  note_exporter.lua
mpvacious/anki/tests/: test_new_note_checker.lua
mpvacious/history/: client.lua  controller.lua  normalizer.lua
mpvacious/history_server/: __main__.py  store.py
mpvacious/history_server/tests/: test_store.py
