[project]
name = "mpvacious-history-server"
version = "0.1.0"
description = "Local mining history helper for mpvacious"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["history_server/tests"]
pythonpath = ["."]
